Added how to play

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./javascript.js"></script>
 
     <h1>Rock Paper Scissors</h1>
+    <p>Open the console with CTRL + SHIFT + J and type Game() followed by enter to play</p>
     
 </body>
 </html>
