Add Rock Paper Scissors Buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script src="./javascript.js"></script>
 
     <h1>Rock Paper Scissors</h1>
-    <p>Open the console with CTRL + SHIFT + J and type Game() followed by enter to play</p>
+    
+    <button id="btnRock">Rock</button>
+    <button id="btnPaper">Paper</button>
+    <button id="btnScissors">Scissors</button>
     
 </body>
 </html>
