Added Statistics Labels

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 
     <h1>Rock Paper Scissors</h1>
     
+    <div id="results"></div>
+    <br>
+
     <button id="btnRock">Rock</button>
     <button id="btnPaper">Paper</button>
     <button id="btnScissors">Scissors</button>
+
+    <br>
+    <br>
+    <div id="seriesResults"></div>
+    <br>
+    <div id="wins">0 Wins</div>
+    <div id="losses">0 Losses</div>
+    <div id="ties">0 Ties</div>
 
     <script src="./javascript.js"></script>
     
